# cpp-snippets-templates-and-utilities

./: CMakeLists.txt  README.md
docs/: list_benchmarks.md  list_vs_intrusive_list.md  string_capacity_growth.md  string_copy_move_analysis.md  string_sso_notes.md
src/: bench_erase_vector_vs_list.cpp  bench_insert_vector_vs_list.cpp  bench_splice_vs_vector_move.cpp  benchmark_list_vs_intrusivelist.cpp  ll_intrusive_list.hpp  ll_list_pool.hpp  main.cpp  mini_list.hpp  string_capacity_growth.cpp  string_copy_move_bench.cpp  string_practice_problem_1.cpp  string_sso_inspector.cpp
